# venegas-control-nomina

./: .gitignore  README.md  main.py  pyproject.toml  scripts.sql
.github/workflows/: deploy.yml
config/: settings.py  urls.py
docs/: Control Nómina API.postman_collection.json
nomina/: admin.py  filters.py  pagination.py  permissions.py  services.py  urls.py
nomina/fixtures/: impuesto_renta_2024.json  impuesto_renta_2025.json  impuesto_renta_2026.json  sbu.json
nomina/migrations/: 0001_initial.py
nomina/models/: __init__.py  descuentos.py  detalle_nomina.py  empleado.py  impuesto_renta.py  nomina.py  sbu.py
nomina/serializers/: __init__.py  descuentos.py  detalle_nomina.py  empleado.py  impuesto_renta.py  nomina.py  sbu.py  user.py
nomina/tests/: helpers.py  test_auth.py  test_detalle_nomina.py  test_empleados.py  test_impuesto_renta.py  test_nominas.py  test_sbu.py  test_users.py
nomina/views/: __init__.py  auth.py  descuentos.py  detalle_nomina.py  empleado.py  impuesto_renta.py  nomina.py  sbu.py  user.py
