[project]
name = "control-nomina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.5",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
]
